--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,39 @@
-<h4>{{title}}</h4>
-
-<div class="card-container">
-  <div class="card" *ngFor="let player of players | playerSort">
+<div class="title">
+  {{title}}
+</div>
+<div class="rr-top-8">
+  <div class="card" *ngFor="let player of players | playerSort | slice:0:8">
     <div class="avatar-container">
-      <div class="avatar">
         <figure [style.background]="player.background">
           <div class="eyes">
             <div class="eye"></div>
             <div class="eye"></div>
           </div>
         </figure>
+        <div class="data">
+          <div class="name">{{player.name}}</div>
+          <div class="wins">
+            <div>Wins</div>
+            <div>{{player.wins}}</div>
+          </div>
+          <div class="attack">
+            <div>Attack</div>
+            <div>{{player.attack}}</div>
+          </div>
+        </div>
+    </div>
+  </div>
+</div>
+<!-- <div class="rr-runners-up">
+  <div class="card" *ngFor="let player of players| slice:8">
+    <div class="avatar-container">
+      <figure [style.background]="player.background">
+        <div class="eyes">
+          <div class="eye"></div>
+          <div class="eye"></div>
+        </div>
+      </figure>
+      <div class="data">
         <div class="name">{{player.name}}</div>
         <div class="wins">
           <div>Wins</div>
@@ -22,4 +46,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
