--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,24 +1,29 @@
 .main {
   width: 100%;
   display: flex;
+  height: 95vh;
 }
 
-.rr-top-8 {
+.round-robin {
   display: flex;
-  width: 18%;
-  margin-left: 41%;
-  margin-right: 41%;
+  width: 20%;
+  margin-left: 30%;
+  margin-right: 30%;
   flex-direction: column;
   flex-wrap: wrap;
   transition: margin-left 2s ease, margin-right 2s ease;
 }
-.sf-top-4, .f-top-2, .champion {
+.qf-top-8, .sf-top-4, .f-top-2, .champion {
   display: flex;
-  width: 18%;
-  margin-left: 1%;
-  margin-right: 1%;
+  width: 20%;
   flex-direction: column;
   justify-content: space-around;
+}
+
+.avatar-container .health {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .quarter {
@@ -42,7 +47,7 @@
   padding-bottom: 1%;
 }
 
-.rr-top-8 .card:nth-child(-n+8) {
+.round-robin .card:nth-child(-n+8) {
   background-color: #404040;
 }
 
@@ -51,6 +56,7 @@
   display: flex;
   margin-left: 2%;
   font-family: 'Open Sans';
+  position: relative;
 }
 
 .avatar-container .data-main {
@@ -67,7 +73,7 @@
   flex-wrap: wrap;
 }
 
-.avatar-container .wins {
+.avatar-container .wins, .avatar-container .health {
   width: 23%;
   font-size: 2vw;
   text-align: right;
@@ -86,14 +92,11 @@
 }
 
 img:after {
-  content: "";
-  display: block;
-  padding-bottom: 25%;
 }
 
 img {
-  width: 25%;
-  height: 1%;
+  width: 8vh;
+  height: 8vh;
   margin: 0;
 }
 
@@ -103,8 +106,17 @@ img {
   font-size: 1vw;
 }
 
-.sf-top-4 .data, .f-top-2 .data, .champion .data {
+.qf-top-8 .data, .sf-top-4 .data, .f-top-2 .data, .champion .data {
   align-items: center;
+}
+
+.hit, .miss, .heal {
+  width: 4vh;
+  height: 4vh;
+  position: absolute;
+  left: 5vh;
+  display: none;
+  transition: display 0.25s;
 }
 
 @font-face {
@@ -114,3 +126,17 @@ img {
   src: local('Open Sans'), local('OpenSans'), url(https://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3ZBw1xU1rKptJj_0jans920.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
+/*
+.game-container {
+  width: 50%;
+  display: flex;
+  align-items: center;
+}
+
+.game {
+  width: 100%;
+  height: 50%;
+  margin-left: 1%;
+  margin-right: 1%;
+  background-image: url('http://wallpaperstock.net/toon-landia-wallpapers_13757_2560x1600.jpg');
+}*/
