--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,14 @@
   {{title}} ({{round}})
 </div>
 <div class="main">
-  <div class="rr-top-8">
-    <div class="card" *ngFor="let player of players; let i = index">
+  <div class="round-robin" *ngIf="round === 'registering' || round === 'rr'">
+    <div class="card" *ngFor="let player of players | playerSort ; let i = index">
       <div class="avatar-container">
         <img src="{{player.icon}}"/>
         <div class="data-main">
           <div class="data">
             <div class="name">{{i+1}}. {{player.name}}</div>
-            <div class="attack"><img src="/assets/2694.png" />{{player.attack}}</div>
+            <div class="attack"><img src="/assets/2694.png"/>{{player.attack}}</div>
           </div>
           <div class="wins">{{player.wins}}</div>
           <div class="separator"></div>
@@ -17,72 +17,69 @@
       </div>
     </div>
   </div>
-</div>
-<!--<div class="sf-top-4">-->
-<!--<div class="card" *ngFor="let player of semiFinalists">-->
-<!--<div class="avatar-container">-->
-<!--<figure [style.background]="player.background">-->
-<!--<div class="eyes">-->
-<!--<div class="eye"></div>-->
-<!--<div class="eye"></div>-->
-<!--</div>-->
-<!--</figure>-->
-<!--<div class="data">-->
-<!--{{player.name}}-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="f-top-2">-->
-<!--<div class="card" *ngFor="let player of finalists">-->
-<!--<div class="avatar-container">-->
-<!--<figure [style.background]="player.background">-->
-<!--<div class="eyes">-->
-<!--<div class="eye"></div>-->
-<!--<div class="eye"></div>-->
-<!--</div>-->
-<!--</figure>-->
-<!--<div class="data">-->
-<!--{{player.name}}-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="champion">-->
-<!--<div class="card">-->
-<!--<div class="avatar-container">-->
-<!--<figure [style.background]="champion.background">-->
-<!--<div class="eyes">-->
-<!--<div class="eye"></div>-->
-<!--<div class="eye"></div>-->
-<!--</div>-->
-<!--</figure>-->
-<!--<div class="data">-->
-<!--<div class="name">{{champion.name}}</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!-- <div class="rr-runners-up">
-  <div class="card" *ngFor="let player of players| slice:8">
-    <div class="avatar-container">
-      <figure [style.background]="player.background">
-        <div class="eyes">
-          <div class="eye"></div>
-          <div class="eye"></div>
-        </div>
-      </figure>
-      <div class="data">
-        <div class="name">{{player.name}}</div>
-        <div class="wins">
-          <div>Wins</div>
-          <div>{{player.wins}}</div>
-        </div>
-        <div class="attack">
-          <div>Attack</div>
-          <div>{{player.attack}}</div>
+  <div class="qf-top-8" *ngIf="round !== 'registering' && round !== 'rr'">
+    <div class="card" *ngFor="let player of players | playerSort | slice:0:8">
+      <div class="avatar-container">
+        <img id="hit-qf-{{player._id}}" src="/assets/pow.png" class="hit" />
+        <img id="miss-qf-{{player._id}}" src="/assets/miss.png" class="miss" />
+        <img id="heal-qf-{{player._id}}" src="/assets/heal-icon.png" class="heal" />
+        <img src="{{player.icon}}"/>
+        <div class="data-main">
+          <div class="data">
+            <div class="name">{{player.name}}</div>
+          </div>
+          <div class="health">{{player.health}}</div>
         </div>
       </div>
     </div>
   </div>
-</div> -->
+  <div class="sf-top-4" *ngIf="round !== 'registering' && round !== 'rr'">
+    <div class="card" *ngFor="let player of semiFinalists">
+      <div class="avatar-container">
+        <img id="hit-sf-{{player._id}}" src="/assets/pow.png" class="hit" />
+        <img id="miss-sf-{{player._id}}" src="/assets/miss.png" class="miss" />
+        <img id="heal-sf-{{player._id}}" src="/assets/heal-icon.png" class="heal" />
+        <img src="{{player.icon}}"/>
+        <div class="data-main">
+          <div class="data">
+            <div class="name">{{player.name}}</div>
+          </div>
+          <div class="health">{{player.health}}</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="f-top-2" *ngIf="round !== 'registering' && round !== 'rr'">
+    <div class="card" *ngFor="let player of finalists">
+      <div class="avatar-container">
+        <img id="hit-f-{{player._id}}" src="/assets/pow.png" class="hit" />
+        <img id="miss-f-{{player._id}}" src="/assets/miss.png" class="miss" />
+        <img id="heal-f-{{player._id}}" src="/assets/heal-icon.png" class="heal" />
+        <img src="{{player.icon}}"/>
+        <div class="data-main">
+          <div class="data">
+            <div class="name">{{player.name}}</div>
+          </div>
+          <div class="health">{{player.health}}</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="champion" *ngIf="round !== 'registering' && round !== 'rr'">
+    <div class="card">
+      <div class="avatar-container">
+        <img src="{{champion.icon}}"/>
+        <div class="data-main">
+          <div class="data">
+            <div class="name">{{champion.name}}</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--<div class="game-container" *ngIf="round !== 'registering' && round !== 'round robin'">
+    <div class="game">
+      game
+    </div>
+  </div>-->
+</div>
