--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -107,10 +107,11 @@ img {
 }
 
 .qf-top-8 .data, .sf-top-4 .data, .f-top-2 .data, .champion .data {
-  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.hit, .miss, .heal {
+.hit, .miss, .heal, .winner {
   width: 4vh;
   height: 4vh;
   position: absolute;
@@ -126,17 +127,3 @@ img {
   src: local('Open Sans'), local('OpenSans'), url(https://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3ZBw1xU1rKptJj_0jans920.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
-/*
-.game-container {
-  width: 50%;
-  display: flex;
-  align-items: center;
-}
-
-.game {
-  width: 100%;
-  height: 50%;
-  margin-left: 1%;
-  margin-right: 1%;
-  background-image: url('http://wallpaperstock.net/toon-landia-wallpapers_13757_2560x1600.jpg');
-}*/
