--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="title" (click)="moveThem()">
+<div class="title">
   {{title}} ({{round}})
 </div>
 <div class="main">
@@ -18,15 +18,17 @@
     </div>
   </div>
   <div class="qf-top-8" *ngIf="round !== 'registering' && round !== 'rr'">
-    <div class="card" *ngFor="let player of players | playerSort | slice:0:8">
+    <div class="card" *ngFor="let player of quarterFinalists">
       <div class="avatar-container">
         <img id="hit-qf-{{player._id}}" src="/assets/pow.png" class="hit" />
         <img id="miss-qf-{{player._id}}" src="/assets/miss.png" class="miss" />
         <img id="heal-qf-{{player._id}}" src="/assets/heal-icon.png" class="heal" />
+        <img id="winner-qf-{{player._id}}" src="/assets/winner.png" class="winner" />
         <img src="{{player.icon}}"/>
         <div class="data-main">
           <div class="data">
             <div class="name">{{player.name}}</div>
+            <div class="attack"><img src="/assets/2694.png"/>{{player.attack}}</div>
           </div>
           <div class="health">{{player.health}}</div>
         </div>
@@ -39,10 +41,12 @@
         <img id="hit-sf-{{player._id}}" src="/assets/pow.png" class="hit" />
         <img id="miss-sf-{{player._id}}" src="/assets/miss.png" class="miss" />
         <img id="heal-sf-{{player._id}}" src="/assets/heal-icon.png" class="heal" />
+        <img id="winner-sf-{{player._id}}" src="/assets/winner.png" class="winner" />
         <img src="{{player.icon}}"/>
         <div class="data-main">
           <div class="data">
             <div class="name">{{player.name}}</div>
+            <div class="attack"><img src="/assets/2694.png"/>{{player.attack}}</div>
           </div>
           <div class="health">{{player.health}}</div>
         </div>
@@ -55,10 +59,12 @@
         <img id="hit-f-{{player._id}}" src="/assets/pow.png" class="hit" />
         <img id="miss-f-{{player._id}}" src="/assets/miss.png" class="miss" />
         <img id="heal-f-{{player._id}}" src="/assets/heal-icon.png" class="heal" />
+        <img id="winner-f-{{player._id}}" src="/assets/winner.png" class="winner" />
         <img src="{{player.icon}}"/>
         <div class="data-main">
           <div class="data">
             <div class="name">{{player.name}}</div>
+            <div class="attack"><img src="/assets/2694.png"/>{{player.attack}}</div>
           </div>
           <div class="health">{{player.health}}</div>
         </div>
